Cleaned up logging wherever possible (quiet instead of verbose debug logging)