@@ -47,205 +47,196 @@ import stream.util.Variables;
  */
 public class run {
 
-	static {
-		StreamRuntime.setupLogging();
-	}
-	static Logger log = LoggerFactory.getLogger(stream.run.class);
-	private static String version;
+    static {
+        StreamRuntime.setupLogging();
+    }
+    public final static Logger log = LoggerFactory.getLogger(stream.run.class);
+    private static String version;
 
-	public static void setupOutput() throws Exception {
-		if (System.getProperty("container.stdout") != null) {
-			System.setOut(new PrintStream(new FileOutputStream(System
-					.getProperty("container.stdout"))));
-		}
+    public static void setupOutput() throws Exception {
+        if (System.getProperty("container.stdout") != null) {
+            System.setOut(new PrintStream(new FileOutputStream(System.getProperty("container.stdout"))));
+        }
 
-		if (System.getProperty("container.stderr") != null) {
-			System.setOut(new PrintStream(new FileOutputStream(System
-					.getProperty("container.stdout"))));
-		}
-	}
+        if (System.getProperty("container.stderr") != null) {
+            System.setOut(new PrintStream(new FileOutputStream(System.getProperty("container.stdout"))));
+        }
+    }
 
-	public static List<String> handleArguments(String[] args) {
+    public static List<String> handleArguments(String[] args) {
 
-		if (args.length == 0) {
-			System.out.println("streams, Version " + getVersion());
-			System.out.println();
-			System.out.println("No container file specified.");
-			System.out.println();
-			System.out.println("Usage: ");
-			System.out.println("\tstream.run /path/container-file.xml");
-			System.out.println();
-			return null;
-		}
+        if (args.length == 0) {
+            System.out.println("streams, Version " + getVersion());
+            System.out.println();
+            System.out.println("No container file specified.");
+            System.out.println();
+            System.out.println("Usage: ");
+            System.out.println("\tstream.run /path/container-file.xml");
+            System.out.println();
+            return null;
+        }
 
-		for (String arg : args) {
-			if (arg.equals("-v") || "--version".equals(args)) {
-				System.out.println("streams, Version " + getVersion());
-				return null;
-			}
-		}
+        for (String arg : args) {
+            if (arg.equals("-v") || "--version".equals(args)) {
+                System.out.println("streams, Version " + getVersion());
+                return null;
+            }
+        }
 
-		List<String> list = new ArrayList<String>();
-		for (String arg : args) {
-			if (arg.startsWith("-D") || arg.startsWith("--")) {
-				int idx = arg.indexOf("=");
-				String key = null;
-				String value = "";
-				if (idx > 2) {
-					key = arg.substring(2, idx);
-					value = arg.substring(idx + 1);
-				} else {
-					key = arg.substring(2);
-				}
+        List<String> list = new ArrayList<String>();
+        for (String arg : args) {
+            if (arg.startsWith("-D") || arg.startsWith("--")) {
+                int idx = arg.indexOf("=");
+                String key = null;
+                String value = "";
+                if (idx > 2) {
+                    key = arg.substring(2, idx);
+                    value = arg.substring(idx + 1);
+                } else {
+                    key = arg.substring(2);
+                }
 
-				log.debug("Setting property '{}' = '{}'", key, value);
-				System.setProperty(key, value);
-			} else {
-				log.debug("Adding argument '{}'", arg);
-				list.add(arg);
-			}
-		}
+                log.debug("Setting property '{}' = '{}'", key, value);
+                System.setProperty(key, value);
+            } else {
+                log.debug("Adding argument '{}'", arg);
+                list.add(arg);
+            }
+        }
 
-		return list;
-	}
+        return list;
+    }
 
-	public static void mainWithMap(URL url, Map<String, String> args)
-			throws Exception {
-		StreamRuntime.setupLogging();
+    public static void mainWithMap(URL url, Map<String, String> args) throws Exception {
+        StreamRuntime.setupLogging();
 
-		Variables props = StreamRuntime.loadUserProperties();
-		props.addVariables(args);
+        Variables props = StreamRuntime.loadUserProperties();
+        props.addVariables(args);
 
-		log.debug("Creating process-container from configuration at {}", url);
-		ProcessContainer container = new ProcessContainer(url, null, props);
+        log.debug("Creating process-container from configuration at {}", url);
+        ProcessContainer container = new ProcessContainer(url, null, props);
 
-		log.info("Starting process-container...");
-		container.run();
-		log.info("Container finished.");
+        log.info("Starting process-container...");
+        container.run();
+        log.info("Container finished.");
 
-	}
+    }
 
-	/**
-	 * @param args
-	 */
-	public static void main(String[] args) throws Exception {
+    /**
+     * @param args
+     */
+    public static void main(String[] args) throws Exception {
 
-		List<String> params = handleArguments(args);
-		if (params == null || params.isEmpty()) {
-			return;
-		}
+        List<String> params = handleArguments(args);
+        if (params == null || params.isEmpty()) {
+            return;
+        }
 
-		setupOutput();
+        setupOutput();
 
-		URL url;
-		try {
-			url = new URL(params.get(0));
-		} catch (Exception e) {
-			File f = new File(params.get(0));
-			url = f.toURI().toURL();
-		}
-		main(url);
-	}
+        URL url;
+        try {
+            url = new URL(params.get(0));
+        } catch (Exception e) {
+            File f = new File(params.get(0));
+            url = f.toURI().toURL();
+        }
+        main(url);
+    }
 
-	public static void main(URL url) throws Exception {
+    public static void main(URL url) throws Exception {
 
-		setupOutput();
+        setupOutput();
 
-		StreamRuntime.setupLogging();
+        StreamRuntime.setupLogging();
 
-		final Variables vars = StreamRuntime.loadUserProperties();
+        final Variables vars = StreamRuntime.loadUserProperties();
 
-		log.debug("Creating process-container from configuration at {}", url);
-		ProcessContainer container = new ProcessContainer(url, null, vars);
+        log.debug("Creating process-container from configuration at {}", url);
+        ProcessContainer container = new ProcessContainer(url, null, vars);
 
-		log.info("Starting process-container...");
-		// if (true) {
-		// System.out.println("You're using Eclipse; click in this console and	"
-		// +
-		// "press ENTER to call System.exit() and run the shutdown routine.");
-		// try {
-		// System.in.read();
-		// } catch (IOException e) {
-		// // TODO Auto-generated catch block
-		// e.printStackTrace();
-		// }
-		// System.exit(0);
-		// }
-		container.run();
-		log.info("Container finished.");
+        log.info("Starting process-container...");
+        // if (true) {
+        // System.out.println("You're using Eclipse; click in this console and "
+        // +
+        // "press ENTER to call System.exit() and run the shutdown routine.");
+        // try {
+        // System.in.read();
+        // } catch (IOException e) {
+        // // TODO Auto-generated catch block
+        // e.printStackTrace();
+        // }
+        // System.exit(0);
+        // }
+        container.run();
+        log.info("Container finished.");
 
-	}
+    }
 
-	public static void main(URL url, Map<String, ElementHandler> elementHandler)
-			throws Exception {
+    public static void main(URL url, Map<String, ElementHandler> elementHandler) throws Exception {
 
-		StreamRuntime.setupLogging();
+        StreamRuntime.setupLogging();
 
-		Variables vars = StreamRuntime.loadUserProperties();
+        Variables vars = StreamRuntime.loadUserProperties();
 
-		log.debug("Creating process-container from configuration at {}", url);
-		ProcessContainer container = new ProcessContainer(url, elementHandler,
-				vars);
+        log.debug("Creating process-container from configuration at {}", url);
+        ProcessContainer container = new ProcessContainer(url, elementHandler, vars);
 
-		log.info("Starting process-container...");
-		container.run();
-		log.info("Container finished.");
-	}
+        log.info("Starting process-container...");
+        container.run();
+        log.info("Container finished.");
+    }
 
-	public static void main(String resource) throws Exception {
-		log.info("Looking for configuration at resource {} in classpath",
-				resource);
-		main(run.class.getResource(resource));
-	}
+    public static void main(String resource) throws Exception {
+        log.info("Looking for configuration at resource {} in classpath", resource);
+        main(run.class.getResource(resource));
+    }
 
-	public static void main(String resource,
-			Map<String, ElementHandler> elementHandler) throws Exception {
-		log.info("Looking for configuration at resource {} in classpath",
-				resource);
-		main(run.class.getResource(resource), elementHandler);
-	}
+    public static void main(String resource, Map<String, ElementHandler> elementHandler) throws Exception {
+        log.info("Looking for configuration at resource {} in classpath", resource);
+        main(run.class.getResource(resource), elementHandler);
+    }
 
-	public synchronized static String getVersion() {
-		if (version != null) {
-			return version;
-		}
+    public synchronized static String getVersion() {
+        if (version != null) {
+            return version;
+        }
 
-		// try to load from maven properties first
-		try {
-			Properties p = new Properties();
-			InputStream is = run.class
-					.getResourceAsStream("/META-INF/maven/de.sfb876/streams-runtime/pom.properties");
-			if (is != null) {
-				p.load(is);
-				version = p.getProperty("version");
-			}
-		} catch (Exception e) {
-			// ignore
-		}
+        // try to load from maven properties first
+        try {
+            Properties p = new Properties();
+            InputStream is = run.class.getResourceAsStream("/META-INF/maven/de.sfb876/streams-runtime/pom.properties");
+            if (is != null) {
+                p.load(is);
+                version = p.getProperty("version");
+            }
+        } catch (Exception e) {
+            // ignore
+        }
 
-		// fallback to using Java API
-		if (version == null) {
-			
-			log.warn("Could not obtain streams version from Maven properties");
-			
-			Package aPackage = run.class.getPackage();
-			if (aPackage != null) {
-				version = aPackage.getImplementationVersion();
-				if (version == null) {
-					version = aPackage.getSpecificationVersion();
-				}
-			}
-			
-		}
+        // fallback to using Java API
+        if (version == null) {
 
-		if (version == null) {
-			
-			// we could not compute the version so use a blank
-			version = "";
-			log.warn("Could neither obtain streams version from Java API");
-			
-		}
+            log.warn("Could not obtain streams version from Maven properties");
 
-		return version;
-	}
+            Package aPackage = run.class.getPackage();
+            if (aPackage != null) {
+                version = aPackage.getImplementationVersion();
+                if (version == null) {
+                    version = aPackage.getSpecificationVersion();
+                }
+            }
+
+        }
+
+        if (version == null) {
+
+            // we could not compute the version so use a blank
+            version = "";
+            log.warn("Could neither obtain streams version from Java API");
+
+        }
+
+        return version;
+    }
 }
